Working Who Are We? page component with profile for Seumas, more to follow later if people give consent for their profiles

--- a/tuff_city_jitsu_club_client/src/App.css
+++ b/tuff_city_jitsu_club_client/src/App.css
@@ -49,3 +49,11 @@
 .whiteText {
   color: white !important;
 }
+
+.photo {
+  height: 35vh;
+  width: 35vh;
+  display:flex;
+  justify-content: center;
+
+}
